--- a/cookbooks/unicorn/templates/default/unicorn.rb.erb
+++ b/cookbooks/unicorn/templates/default/unicorn.rb.erb
@@ -10,7 +10,7 @@
 
 # Use at least one worker per core if you're on a dedicated server,
 # more will usually help for _short_ waits on databases/caches.
-worker_processes <%= @worker_process %> 
+worker_processes <%= node[:unicorn][:worker_processes] %> 
 
 # Since Unicorn is never exposed to outside clients, it does not need to
 # run on the standard HTTP port (80), there is no reason to start Unicorn
@@ -21,28 +21,28 @@ worker_processes <%= @worker_process %>
 
 # Help ensure your application will always spawn in the symlinked
 # "current" directory that Capistrano sets up.
-working_directory "<%= @working_directory %>" # available in 0.94.0+
+working_directory "<%= node[:unicorn][:working_directory] %>" # available in 0.94.0+
 
 # listen on both a Unix domain socket and a TCP port,
 # we use a shorter backlog for quicker failover when busy
-listen "<%= @listen %>", :backlog => <%= @backlog %>
+listen "<%= node[:unicorn][:listen] %>", :backlog => <%= node[:unicorn][:backlog] %>
 listen 8080, :tcp_nopush => true
 
 # nuke workers after 30 seconds instead of 60 seconds (the default)
-timeout <%= @worker_timeout %>
+timeout <%= node[:unicorn][:worker_timeout] %>
 
 # feel free to point this anywhere accessible on the filesystem
-pid "<%= @pid %>"
+pid "<%= node[:unicorn][:pid] %>"
 
 # By default, the Unicorn logger will write to stderr.
 # Additionally, ome applications/frameworks log to stderr or stdout,
 # so prevent them from going to /dev/null when daemonized here:
-stderr_path "<%= @stderr_path %>"
-stdout_path "<%= @stdout_path %>"
+stderr_path "<%= node[:unicorn][:stderr_path] %>"
+stdout_path "<%= node[:unicorn][:stdout_path] %>"
 
 # combine Ruby 2.0.0dev or REE with "preload_app true" for memory savings
 # http://rubyenterpriseedition.com/faq.html#adapt_apps_for_cow
-preload_app <%= @preload_app %>
+preload_app <%= node[:unicorn][:preload_app] %>
 GC.respond_to?(:copy_on_write_friendly=) and
   GC.copy_on_write_friendly = true
 
