--- a/cookbooks/nginx/templates/default/nginx.conf.erb
+++ b/cookbooks/nginx/templates/default/nginx.conf.erb
@@ -24,8 +24,8 @@ user nobody nogroup; # for systems with a "nogroup"
 # user nobody nobody; # for systems with "nobody" as a group instead
 
 # Feel free to change all paths to suite your needs here, of course
-pid <%= node['nginx']['pid'] %>
-error_log <%= node['nginx']['error_log'] %>
+pid <%= node['nginx']['pid'] %>;
+error_log <%= node['nginx']['error_log'] %>;
 
 events {
   worker_connections 1024; # increase if you have lots of clients
@@ -39,7 +39,7 @@ http {
   include mime.types;
 
   # fallback in case we can't determine a type
-  node_type application/octet-stream;
+  #node_type application/octet-stream;
 
   # click tracking!
   access_log <%= node['nginx']['access_log'] %> combined;
